# stereo_calibr

./: .gitignore  CMakeLists.txt  readme.md  setting.yaml
cali/result/: cali_mat.yaml  calibrationresults_R.txt  data_params_matlab.yaml  stereoRectifyParams.txt  stereocalibrateresult_L.txt
include/: util.h
src/: cali_mat.cpp  cali_matlab.yaml  check.cpp  file.cpp  matlabstereo.m  script.py  stereo_calib.cpp  stereo_match.cpp  util.cpp
